--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "canvas": "^1.6.11",
+    "d3-cloud": "^1.2.5",
+    "d3-node": "^2.0.1",
     "express": "^4.16.3",
     "helmet": "^3.12.1",
     "lodash": "^4.17.10",
