--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "kclassic-slacker",
-  "version": "1.0.0",
-  "description": "",
+  "name": "slackerman",
+  "version": "2.0.0",
+  "description": "cool shit",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --inspect index.js",
     "test": "eslint ."
   },
   "engines": {
@@ -14,20 +13,19 @@
   "author": "sycnus",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "helmet": "^3.12.1",
-    "lodash": "^4.17.10",
-    "moment": "^2.22.2",
-    "mongoose": "^5.1.4",
-    "request": "^2.87.0",
-    "request-promise-native": "^1.0.5"
+    "aws-sdk": "^2.773.0",
+    "axios": "^0.20.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "form-data": "^3.0.0",
+    "serverless-http": "^2.6.0"
   },
   "devDependencies": {
-    "dotenv": "^6.0.0",
-    "eslint": "^4.19.1",
-    "eslint-plugin-node": "^6.0.1",
-    "nodemon": "^1.17.5"
+    "eslint": "^7.11.0",
+    "eslint-plugin-node": "^11.1.0",
+    "serverless-dynamodb-local": "^0.2.39",
+    "serverless-offline": "^6.8.0",
+    "serverless-webpack": "^5.3.5"
   },
   "private": true
 }
